@@ -3,8 +3,9 @@
 namespace N98\Magento\Command\Script\Repository;
 
 use N98\Magento\Command\AbstractMagentoCommand;
+use Symfony\Component\Console\Input\ArrayInput;
 use Symfony\Component\Console\Input\InputArgument;
-use Symfony\Component\Console\Input\StringInput;
+use Symfony\Component\Console\Input\InputOption;
 use Symfony\Component\Console\Shell;
 use Symfony\Component\Console\Input\InputInterface;
 use Symfony\Component\Console\Output\OutputInterface;
@@ -16,6 +17,7 @@ class RunCommand extends AbstractRepositoryCommand
         $this
             ->setName('script:repo:run')
             ->addArgument('script', InputArgument::OPTIONAL, 'Name of script in repository')
+            ->addOption('define', 'd', InputOption::VALUE_OPTIONAL | InputOption::VALUE_IS_ARRAY, 'Defines a variable')
             ->setDescription('Run script from repository')
         ;
     }
@@ -51,7 +53,15 @@ class RunCommand extends AbstractRepositoryCommand
             $selectedFile = $files[$script]['fileinfo']->getPathname();
         }
 
-        $input = new StringInput('script ' . escapeshellarg($selectedFile));
+
+        $scriptArray = array(
+            'command'  => 'script',
+            'filename' => $selectedFile,
+        );
+        foreach ($input->getOption('define') as $define) {
+            $scriptArray['--define'][] = $define;
+        }
+        $input = new ArrayInput($scriptArray);
         $this->getApplication()->run($input, $output);
     }
 }
